Apr 07 2006 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.15007
  - Fixed https://rt.cpan.org/Ticket/Display.html?id=3291

Apr 07 2006 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.15006
  - According to https://rt.cpan.org/Ticket/Display.html?id=6130 - made
    the auto-conversion of textual errors to object customizable.

Apr 03 2006 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.15005
  - Fixed the conversion of textual messages to Error::Simple when
    they contain information about an open filehandle. (as reported in
    http://rt.cpan.org/Ticket/Display.html?id=6130 )

Apr 02 2006 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.15004
  - Added POD to the lib/Error/Simple.pm module.

Mar 31 2006 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.15003
  - Added the lib/Error/Simple.pm module (that just "use"'s Error) so
    one can say "use base 'Error::Simple';' Added an appropriate test. 
    Fixes: http://rt.cpan.org/Public/Bug/Display.html?id=17841

Mar 30 2006 <shlomif@iglu.org.il> (Shlomi Fish)

  - Added Scalar::Util to the dependencies in Makefile.PL.

  Error.pm #0.15002
  - Fixed http://rt.cpan.org/Public/Bug/Display.html?id=18024 and a related
  exception thrown because ->isa was called on something that was not
  certainly an object.

  Error.pm #0.15001

  - Moved Error.pm inside the distribution to reside under lib/.

Oct 9 2001 <u_arunkumar@yahoo.com> (Arun Kumar U)

  Error.pm #0.15

  - Removed the run_clauses calls from the stack trace

May 12 2001 <u_arunkumar@yahoo.com> (Arun Kumar U)

  Error.pm #0.14

  - Added overloading method for 'bool'. This was neccessary so that
    examining the value of $@ after a eval block, returns a true  
    value
  - Applied the diffs from Graham's code base
  - Changed README with more information about the module

Change 436 on 2000/03/29 by <gbarr@pobox.com> (Graham Barr)

  Added ppd stuff to MANIFEST and Makefile.PL

Change 435 on 2000/03/29 by <gbarr@pobox.com> (Graham Barr)
